fixed wrong colors

--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,4 +1,4 @@
 $alsdi-black: #1e1e1e;
-$alsdi-gold: #C59A3B;
+$alsdi-gold: #C4993B;
 $alsdi-white: #FFFFFF;
 $alsdi-grey: #8395a7;
